--- a/themes/foundation/templates/admin/option/edit.twig
+++ b/themes/foundation/templates/admin/option/edit.twig
@@ -22,15 +22,15 @@
                         </div>
 
                         <div class="well">
-                            <div class="pull-right text-muted text-right">
+                            <div class="text-muted text-right">
                                 <span title="Created">{{ option.createdFormatted }}</span><br>
                                 <span title="Updated">{{ option.updatedFormatted }}</span><br>
                             </div>
 
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="button">
                                 <i class="fa fa-check-circle"></i> Save
                             </button>
-                            <a href="{{ routeUrl('admin.option') }}" class="btn btn-default">Cancel</a>
+                            <a href="{{ routeUrl('admin.option') }}" class="button secondary">Cancel</a>
                         </div>
                     </fieldset>
                 </form>
