--- a/themes/foundation/templates/admin/order/add-shipment-label.twig
+++ b/themes/foundation/templates/admin/order/add-shipment-label.twig
@@ -23,7 +23,7 @@
 
                         {% include '@theme/admin/tools/ad-hoc-shipment/parts/shipment-input-fields.twig' %}
                     <div class="form-actions">
-                            <button type="submit" class="btn btn-primary btn-block">
+                            <button type="submit" class="button btn-block">
                                 Get Shipping Rates
                             </button>
                         </div>
@@ -93,7 +93,7 @@
                             {% endfor %}
 
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary btn-block">
+                                <button type="submit" class="button btn-block">
                                     <i class="fa fa-credit-card"></i> Buy Shipping Label
                                 </button>
                             </div>
