--- a/themes/foundation/templates/admin/order/add-shipment-tracking.twig
+++ b/themes/foundation/templates/admin/order/add-shipment-tracking.twig
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="form-actions">
-                            <button type="submit" class="btn btn-primary btn-block">
+                            <button type="submit" class="button btn-block">
                                 Create Shipment
                             </button>
                         </div>
