--- a/themes/foundation/templates/admin/order/add-shipment.twig
+++ b/themes/foundation/templates/admin/order/add-shipment.twig
@@ -89,14 +89,14 @@
                         <button type="submit"
                                 name="action"
                                 value="create-shipping-label"
-                                class="btn btn-primary">
+                                class="button">
                             <i class="fa fa-truck"></i> Create Shipping Label
                         </button>
 
                         <button type="submit"
                                 name="action"
                                 value="create-with-tracking-code"
-                                class="btn btn-info">
+                                class="button">
                             <i class="fa fa-thumb-tack"></i> Create with Tracking Code
                         </button>
                     </div>
