--- a/themes/foundation/templates/admin/product/images.twig
+++ b/themes/foundation/templates/admin/product/images.twig
@@ -4,74 +4,68 @@
 {% block pageTitle %}Product Images - {{ product.name }}{% endblock %}
 
 {% block content %}
-    <div class="container">
 
-        {% include '@theme/admin/product/parts/header.twig' %}
+    {% include '@theme/admin/product/parts/header.twig' %}
 
-        <div class="row">
-            <div class="col-sm-12">
-                <br>
+    <div class="row column">
 
-                {% for image in product.images %}
-                    <div class="col-sm-4">
-                        <div class="thumbnail">
-                            <div class="text-center" style="height: 160px;">
-                                <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
-                            </div>
-                            <br />
-                            <p>
-                                {% include '@theme/admin/product/parts/set-default-image.twig' %}
-
-                                <br>
-                                <form action="{{ routeUrl('admin.product.remove-image') }}"
-                                      method="post"
-                                      class="form">
-                                    {{ form.csrf() }}
-                                    {{ form.hidden('productId', product.id.hex) }}
-                                    {{ form.hidden('imageId', image.id.hex) }}
-
-                                    <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Remove</button>
-                                </form>
-                            </p>
-                        </div>
+        {% for image in product.images %}
+            <div class="medium-4 columns">
+                <div class="thumbnail">
+                    <div class="text-center" style="height: 160px;">
+                        <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
                     </div>
-                {% endfor %}
+                    <br />
+                    <p>
+                        {% include '@theme/admin/product/parts/set-default-image.twig' %}
 
-                <div class="clearfix"></div>
-
-                <div class="well well-sm">
-                    <div class="form-group">
-                        <form action="{{ routeUrl('admin.product.upload-image') }}"
-                              method="post"
-                              class="form"
-                              enctype="multipart/form-data">
+                        <br>
+                        <form action="{{ routeUrl('admin.product.remove-image') }}"
+                                method="post"
+                                class="form">
                             {{ form.csrf() }}
                             {{ form.hidden('productId', product.id.hex) }}
+                            {{ form.hidden('imageId', image.id.hex) }}
 
-                            <input type="file" name="image">
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-upload"></i> Upload</button>
+                            <button type="submit" class="button alert"><i class="fa fa-trash"></i> Remove</button>
                         </form>
-                    </div>
+                    </p>
                 </div>
+            </div>
+        {% endfor %}
 
-                <h3>Tag Images:</h3>
+        <div class="clearfix"></div>
 
-                {% for image in product.tagImages %}
-                    <div class="col-sm-4">
-                        <div class="thumbnail">
-                            <div class="text-center" style="height: 160px;">
-                                <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
-                            </div>
-                            <br />
-                            <p>
-                                {% include '@theme/admin/product/parts/set-default-image.twig' %}
-                            </p>
-                        </div>
-                    </div>
-                {% else %}
-                    No tag images
-                {% endfor %}
+        <div class="well well-sm">
+            <div class="form-group">
+                <form action="{{ routeUrl('admin.product.upload-image') }}"
+                        method="post"
+                        class="form"
+                        enctype="multipart/form-data">
+                    {{ form.csrf() }}
+                    {{ form.hidden('productId', product.id.hex) }}
+
+                    <input type="file" name="image">
+                    <button type="submit" class="button"><i class="fa fa-upload"></i> Upload</button>
+                </form>
             </div>
         </div>
-    </div>
+
+        <h3>Tag Images:</h3>
+
+        {% for image in product.tagImages %}
+            <div class="medium-4 columns">
+                <div class="thumbnail">
+                    <div class="text-center" style="height: 160px;">
+                        <img src="{{ imageUrl(image) }}" style="max-width: 100%; max-height: 100%;" />
+                    </div>
+                    <br />
+                    <p>
+                        {% include '@theme/admin/product/parts/set-default-image.twig' %}
+                    </p>
+                </div>
+            </div>
+        {% else %}
+            No tag images
+        {% endfor %}
 {% endblock %}
