--- a/themes/foundation/templates/admin/product/index.twig
+++ b/themes/foundation/templates/admin/product/index.twig
@@ -16,7 +16,7 @@
 
         <div class="row column">
             <a href="{{ routeUrl('admin.product.new') }}"
-               class="btn btn-success btn-xs">
+               class="button success">
                 <i class="fa fa-plus-circle"></i> New Product
             </a>
 
