--- a/themes/foundation/templates/admin/product/parts/set-default-image.twig
+++ b/themes/foundation/templates/admin/product/parts/set-default-image.twig
@@ -1,5 +1,5 @@
 {% if image.path == product.defaultImage %}
-    <div class="label label-primary pull-right">Default</div>
+    <div class="label label-primary">Default</div>
 
     <form action="{{ routeUrl('admin.product.unset-default-image') }}"
           method="post">
