--- a/themes/foundation/templates/admin/promotion/cart-price-rule/discounts.twig
+++ b/themes/foundation/templates/admin/promotion/cart-price-rule/discounts.twig
@@ -32,7 +32,7 @@
                                     {{ form.hidden('cartPriceRuleDiscountId', cartPriceRuleDiscount.id.hex) }}
 
                                     <div class="form-group col-sm-4 text-right">
-                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs" title="Delete Cart Price Rule Discount"><i class="fa fa-remove"></i></button>
+                                        <button type="submit" name="action" value="delete" class="button alert" title="Delete Cart Price Rule Discount"><i class="fa fa-remove"></i></button>
                                     </div>
                                 </form>
                             </div>
@@ -56,7 +56,7 @@
 
                             <div class="form-group col-sm-2">
                                 <br>
-                                <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Cart Price Rule Product Item">
+                                <button type="submit" class="button" title="Add Cart Price Rule Product Item">
                                     <i class="fa fa-check-circle"></i>
                                     Create
                                 </button>
