--- a/themes/foundation/templates/admin/promotion/cart-price-rule/index.twig
+++ b/themes/foundation/templates/admin/promotion/cart-price-rule/index.twig
@@ -8,9 +8,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="pull-right">
+                <div>
                     <a href="{{ routeUrl('admin.cart-price-rule.new') }}"
-                       class="btn btn-success btn-xs">
+                       class="button success">
                         <i class="fa fa-plus-circle"></i> New Cart Price Rule
                     </a>
                 </div>
