--- a/themes/foundation/templates/admin/tag/parts/option-list.twig
+++ b/themes/foundation/templates/admin/tag/parts/option-list.twig
@@ -33,7 +33,7 @@
                             {{ form.hidden('tagId', tag.id.hex) }}
                             {{ form.hidden('optionId', option.id.hex) }}
 
-                            <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-minus"></i></button>
+                            <button type="submit" class="button alert"><i class="fa fa-minus"></i></button>
                         </form>
                     </td>
                 {% endif %}
