--- a/themes/foundation/templates/cart/estimate-shipping.twig
+++ b/themes/foundation/templates/cart/estimate-shipping.twig
@@ -40,11 +40,11 @@
 
                     <div class="form-actions">
                         {% if shipmentRates is empty %}
-                            <button type="submit" class="btn btn-primary btn-block">
+                            <button type="submit" class="button btn-block">
                                 Get Quote
                             </button>
                         {% else %}
-                            <button type="submit" class="btn btn-primary btn-block">
+                            <button type="submit" class="button btn-block">
                                 Update Zipcode
                             </button>
                         {% endif %}
@@ -85,7 +85,7 @@
                         {% endfor %}
 
                         <div class="form-group" style="margin-top: 20px;">
-                            <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
+                            <button type="submit" class="button" data-loading-text="Saving...">
                                 <i class="fa fa-ok-sign"></i>
                                 Update Total
                             </button>
