--- a/themes/foundation/templates/cart/parts/empty-cart.twig
+++ b/themes/foundation/templates/cart/parts/empty-cart.twig
@@ -1,3 +1,3 @@
 <h1>Shopping Cart</h1>
 Your shopping cart is currently empty.<br /><br />
-<a href="{{ routeUrl('home') }}" class="btn btn-primary">Continue Shopping</a>
+<a href="{{ routeUrl('home') }}" class="button">Continue Shopping</a>
