--- a/themes/foundation/templates/helper/site-search.twig
+++ b/themes/foundation/templates/helper/site-search.twig
@@ -5,7 +5,7 @@
     <div class="input-group">
         <input type="text" name="q" class="form-control" placeholder="Search" value="{{ searchQuery }}">
         <div class="input-group-btn">
-            <button type="submit" class="btn btn-default search-button">
+            <button type="submit" class="button secondary search-button">
                 <i class="fa fa-search"></i>
             </button>
         </div>
