--- a/themes/foundation/templates/layout/parts/head.twig
+++ b/themes/foundation/templates/layout/parts/head.twig
@@ -11,6 +11,6 @@
 {% endif %}
 
 <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
 <link rel="stylesheet" href="{{ routeUrl('style.serve') }}?p=main.scss&formatter=compact">
