--- a/themes/foundation/templates/macros/paginate.twig
+++ b/themes/foundation/templates/macros/paginate.twig
@@ -25,7 +25,7 @@
                 of {{ totalItems }} Results
             </div>
 
-            <ul class="pagination pagination-sm pull-right">
+            <ul class="pagination pagination-sm">
                 {% if currentPage > 1 %}
                     <li><a href="{{ paginationPath }}{{ currentPage - 1 }}" rel="prev"><i class="fa fa-chevron-left"></i> Previous</a></li>
 
