--- a/themes/foundation/templates/user/login.twig
+++ b/themes/foundation/templates/user/login.twig
@@ -44,12 +44,12 @@
                                required="">
                     </div>
 
-                    <button type="submit" class="btn btn-success">Sign In <i class="fa fa-arrow-circle-right"></i></button>
+                    <button type="submit" class="button success">Sign In <i class="fa fa-arrow-circle-right"></i></button>
                 </form>
 
                 <div class="login-forgot-password">
                     <a href="{{ routeUrl('user.forgot-password') }}?email={{ email|url_encode }}"
-                       class="btn btn-link">
+                       class="button">
                         <em>Forgot your password?</em>
                     </a>
                 </div>
