--- a/themes/foundation/templates/admin/attribute/attribute-value/parts/actions.twig
+++ b/themes/foundation/templates/admin/attribute/attribute-value/parts/actions.twig
@@ -14,7 +14,7 @@
 
     <div class="col-sm-6">
         <div class="well well-sm">
-            <div class="pull-right">
+            <div>
                 <form action="{{ routeUrl('admin.attribute.attribute-value.delete') }}"
                       method="post"
                       role="form">
@@ -22,7 +22,7 @@
                     {{ form.hidden('attributeId', attributeValue.attribute.id.getHex()) }}
                     {{ form.hidden('attributeValueId', attributeValue.id.getHex()) }}
 
-                    <button type="submit" class="btn btn-danger btn-xs">
+                    <button type="submit" class="button alert">
                         <i class="fa fa-trash"></i>
                         Delete Attribute Value
                     </button>
