--- a/themes/foundation/templates/admin/coupon/index.twig
+++ b/themes/foundation/templates/admin/coupon/index.twig
@@ -6,27 +6,21 @@
 {% block pageTitle %}Coupons{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="pull-right">
-                    <a href="{{ routeUrl('admin.coupon.new') }}"
-                       class="btn btn-success btn-xs">
-                        <i class="fa fa-plus-circle"></i> New Coupon
-                    </a>
-                </div>
+<div class="row column">
+    <a href="{{ routeUrl('admin.coupon.new') }}"
+        class="button success">
+        <i class="fa fa-plus-circle"></i> New Coupon
+    </a>
 
-                <h1>Coupons</h1>
-                <form action="{{ routeUrl('admin.coupon') }}"
-                      method="get"
-                      class="form-search">
-                    {% include '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name', 'queryString': queryString} only %}
-                </form>
+    <h1>Coupons</h1>
+    <form action="{{ routeUrl('admin.coupon') }}"
+            method="get"
+            class="form-search">
+        {% include '@theme/helper/search-bar.twig' with {'placeholder': 'Search Name', 'queryString': queryString} only %}
+    </form>
 
-                {{ paginate.detailed(pagination) }}
-                {% include '@theme/admin/coupon/parts/coupon-list.twig' with {'coupons': coupons} only %}
-                {{ paginate.detailed(pagination) }}
-            </div>
-        </div>
-    </div>
+    {{ paginate.detailed(pagination) }}
+    {% include '@theme/admin/coupon/parts/coupon-list.twig' with {'coupons': coupons} only %}
+    {{ paginate.detailed(pagination) }}
+</div>
 {% endblock %}
