--- a/themes/foundation/templates/admin/option/new.twig
+++ b/themes/foundation/templates/admin/option/new.twig
@@ -19,10 +19,10 @@
                         </div>
 
                         <div class="well">
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="button">
                                 <i class="fa fa-check-circle"></i> Create
                             </button>
-                            <a href="{{ routeUrl('admin.option') }}" class="btn btn-default">Cancel</a>
+                            <a href="{{ routeUrl('admin.option') }}" class="button secondary">Cancel</a>
                         </div>
                     </fieldset>
                 </form>
