--- a/themes/foundation/templates/admin/option/option-products.twig
+++ b/themes/foundation/templates/admin/option/option-products.twig
@@ -20,12 +20,12 @@
                         <td>
                             <form action="{{ routeUrl('admin.option.delete-option-product') }}"
                                   method="post"
-                                  class="form pull-right">
+                                  class="form">
                                 {{ form.csrf() }}
                                 {{ form.hidden('optionId', option.id.hex) }}
                                 {{ form.hidden('optionProductId', optionProduct.id.hex) }}
 
-                                <button type="submit" class="btn btn-danger btn-xs" title="Remove Product"><i class="fa fa-minus"></i></button>
+                                <button type="submit" class="button alert" title="Remove Product"><i class="fa fa-minus"></i></button>
                             </form>
                         </td>
                     {% endblock %}
