--- a/themes/foundation/templates/admin/promotion/catalog-promotion/index.twig
+++ b/themes/foundation/templates/admin/promotion/catalog-promotion/index.twig
@@ -9,9 +9,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="pull-right">
+                <div>
                     <a href="{{ routeUrl('admin.catalog-promotion.new') }}"
-                       class="btn btn-success btn-xs">
+                       class="button success">
                         <i class="fa fa-plus-circle"></i> New Catalog Promotion
                     </a>
                 </div>
