--- a/themes/foundation/templates/admin/promotion/catalog-promotion/parts/actions.twig
+++ b/themes/foundation/templates/admin/promotion/catalog-promotion/parts/actions.twig
@@ -9,14 +9,14 @@
 
     <div class="col-sm-6">
         <div class="well well-sm">
-            <div class="pull-right">
+            <div>
                 <form action="{{ routeUrl('admin.catalog-promotion.delete') }}"
                       method="post"
                       role="form">
                     {{ form.csrf() }}
                     {{ form.hidden('catalogPromotionId', catalogPromotion.id.hex) }}
 
-                    <button type="submit" class="btn btn-danger btn-xs">
+                    <button type="submit" class="button alert">
                         <i class="fa fa-trash"></i>
                         Delete Catalog Promotion
                     </button>
