--- a/themes/foundation/templates/admin/settings/sales-tax/zipcode.twig
+++ b/themes/foundation/templates/admin/settings/sales-tax/zipcode.twig
@@ -24,7 +24,7 @@
 
                                     <div class="form-group col-sm-1 text-right">
                                         <br>
-                                        <button type="submit" name="action" value="edit" class="btn btn-default btn-xs" title="Edit Tax Rate">Update</button>
+                                        <button type="submit" name="action" value="edit" class="button secondary" title="Edit Tax Rate">Update</button>
                                     </div>
                                 </form>
                                 <form action="{{ routeUrl('admin.settings.sales-tax.delete') }}"
@@ -36,7 +36,7 @@
 
                                     <div class="form-group col-sm-1 text-right">
                                         <br>
-                                        <button type="submit" name="action" value="delete" class="btn btn-danger btn-xs" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
+                                        <button type="submit" name="action" value="delete" class="button alert" title="Delete Tax Rate"><i class="fa fa-remove"></i></button>
                                     </div>
                                 </form>
                             </div>
@@ -56,7 +56,7 @@
 
                             <div class="form-group col-sm-2">
                                 <br>
-                                <button type="submit" class="btn btn-primary btn-sm pull-right" title="Add Tax Rate">
+                                <button type="submit" class="button" title="Add Tax Rate">
                                     <i class="fa fa-check-circle"></i>
                                     Create
                                 </button>
