--- a/themes/foundation/templates/admin/tag/edit.twig
+++ b/themes/foundation/templates/admin/tag/edit.twig
@@ -23,15 +23,15 @@
                         </div>
 
                         <div class="well">
-                            <div class="pull-right text-muted text-right">
+                            <div class="text-muted text-right">
                                 <span title="Created">{{ tag.createdFormatted }}</span><br>
                                 <span title="Updated">{{ tag.updatedFormatted }}</span><br>
                             </div>
 
-                            <button type="submit" class="btn btn-primary" data-loading-text="Saving...">
+                            <button type="submit" class="button" data-loading-text="Saving...">
                                 <i class="fa fa-check-circle"></i> Save
                             </button>
-                            <a href="{{ routeUrl('admin.tag') }}" class="btn btn-default">Cancel</a>
+                            <a href="{{ routeUrl('admin.tag') }}" class="button secondary">Cancel</a>
                         </div>
 
                     </fieldset>
