--- a/themes/foundation/templates/admin/tag/images.twig
+++ b/themes/foundation/templates/admin/tag/images.twig
@@ -30,7 +30,7 @@
                                     {{ form.hidden('tagId', tag.id.hex) }}
                                     {{ form.hidden('imageId', image.id.hex) }}
 
-                                    <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Remove</button>
+                                    <button type="submit" class="button alert"><i class="fa fa-trash"></i> Remove</button>
                                 </form>
                             </p>
                         </div>
@@ -49,7 +49,7 @@
                             {{ form.hidden('tagId', tag.id.hex) }}
 
                             <input type="file" name="image">
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-upload"></i> Upload</button>
+                            <button type="submit" class="button"><i class="fa fa-upload"></i> Upload</button>
                         </form>
                     </div>
                 </div>
