--- a/themes/foundation/templates/admin/tag/options.twig
+++ b/themes/foundation/templates/admin/tag/options.twig
@@ -25,7 +25,7 @@
                                class="form-control typeahead"/>
 
                         <span class="input-group-btn">
-                            <button type="submit" class="btn btn-default"><i class="fa fa-plus"></i> Add</button>
+                            <button type="submit" class="button secondary"><i class="fa fa-plus"></i> Add</button>
                         </span>
                     </div>
                 </form>
