--- a/themes/foundation/templates/admin/tag/parts/actions.twig
+++ b/themes/foundation/templates/admin/tag/parts/actions.twig
@@ -13,14 +13,14 @@
 
     <div class="col-sm-6">
         <div class="well well-sm">
-            <div class="pull-right">
+            <div>
                 <form action="{{ routeUrl('admin.tag.delete') }}"
                       method="post"
                       role="form">
                     {{ form.csrf() }}
                     {{ form.hidden('tagId', tag.id.getHex()) }}
 
-                    <button type="submit" class="btn btn-danger btn-xs">
+                    <button type="submit" class="button alert">
                         <i class="fa fa-trash"></i>
                         Delete Tag
                     </button>
