--- a/themes/foundation/templates/admin/tools/ad-hoc-shipment/new.twig
+++ b/themes/foundation/templates/admin/tools/ad-hoc-shipment/new.twig
@@ -48,7 +48,7 @@
 
                         {% include '@theme/admin/tools/ad-hoc-shipment/parts/shipment-input-fields.twig' %}
                         <div class="form-actions">
-                            <button type="submit" class="btn btn-primary btn-block">
+                            <button type="submit" class="button btn-block">
                                 Get Shipping Rates
                             </button>
                         </div>
@@ -115,7 +115,7 @@
                             {% endfor %}
 
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary btn-block">
+                                <button type="submit" class="button btn-block">
                                     <i class="fa fa-credit-card"></i> Buy Shipping Label
                                 </button>
                             </div>
