--- a/themes/foundation/templates/cart/parts/modify-shipping-button.twig
+++ b/themes/foundation/templates/cart/parts/modify-shipping-button.twig
@@ -1,6 +1,6 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 
-{% set class = 'btn btn-info btn-sm ' ~ extraClass %}
+{% set class = 'button ' ~ extraClass %}
 
 {% if env.shippingType.isFlatRate %}
     <a href="{{ routeUrl('cart.estimate-tax') }}" class="{{ class }} estimate-tax">
