--- a/themes/foundation/templates/cart/parts/totals.twig
+++ b/themes/foundation/templates/cart/parts/totals.twig
@@ -11,7 +11,7 @@
             <td colspan="100%">
                 Shipping:
 
-                <div class="pull-right">
+                <div>
                     {% include '@theme/cart/parts/modify-shipping-button.twig' %}
                 </div>
             </td>
@@ -64,7 +64,7 @@
                                     {{ form.csrf() }}
                                     {{ form.hidden('couponId', coupon.id.hex) }}
 
-                                    <button type="submit" class="btn btn-link btn-xs">
+                                    <button type="submit" class="button">
                                         <i class="fa fa-remove"></i>
                                     </button>
                                     {{ coupon.name }}
