--- a/themes/foundation/templates/helper/order-details.twig
+++ b/themes/foundation/templates/helper/order-details.twig
@@ -143,7 +143,7 @@
                                     )?>
                                 <?php } ?>
 
-                                <button type="submit" class="btn btn-default btn-xs">
+                                <button type="submit" class="button secondary">
                                     <i class="fa fa-shopping-cart"></i> Buy it Again
                                 </button>
                                 <?=Form::close()?>
@@ -157,7 +157,7 @@
                             <div class="clear"></div>
                             {% if orderItem.areAttachmentsEnabled %}
                                 <a href="{{ routeUrl('user.attachment.createForOrderItem', {'orderItemId': orderItem.id.hex}) }}"
-                                   class="btn btn-xs btn-success upload-attachment">
+                                   class="button success upload-attachment">
                                     <i class="fa fa-upload"></i> Upload Attachment
                                 </a>
                             {% endif %}
