--- a/themes/foundation/templates/helper/search-bar.twig
+++ b/themes/foundation/templates/helper/search-bar.twig
@@ -9,7 +9,7 @@
            class="form-control typeahead">
 
     <div class="input-group-btn">
-        <button type="submit" class="btn btn-default">
+        <button type="submit" class="button secondary">
             <i class="fa fa-search"></i> Search
         </button>
     </div>
