--- a/themes/foundation/templates/user/account.twig
+++ b/themes/foundation/templates/user/account.twig
@@ -27,7 +27,7 @@
                             <th>Password:</th>
                             <td>
                                 <a href="{{ routeUrl('user.change-password') }}"
-                                   class="btn btn-default btn-xs pull-right">
+                                   class="button secondary">
                                     Edit Password
                                 </a>
                                 ********
