--- a/themes/foundation/templates/user/attachment/create-for-order-item.twig
+++ b/themes/foundation/templates/user/attachment/create-for-order-item.twig
@@ -19,7 +19,7 @@
                             {{ form.hidden('orderItemId', orderItem.id.hex) }}
 
                             <input type="file" name="image">
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-upload"></i> Upload</button>
+                            <button type="submit" class="button"><i class="fa fa-upload"></i> Upload</button>
                         </form>
                     </div>
                 </div>
