--- a/themes/foundation/templates/user/forgot-password.twig
+++ b/themes/foundation/templates/user/forgot-password.twig
@@ -54,7 +54,7 @@
                                required="">
                     </div>
 
-                    <button type="submit" class="btn btn-success">Continue <i class="fa fa-arrow-circle-right"></i></button>
+                    <button type="submit" class="button success">Continue <i class="fa fa-arrow-circle-right"></i></button>
                 </form>
             </div>
         </div>
